--- a/TS/css/styles.css
+++ b/TS/css/styles.css
@@ -55,5 +55,13 @@ i {
 }
 
 #re, #sl, #pp, #su, #fw {
-	margin-right: 20px;
+	margin-right: 20px; 
+}
+
+.modal-div{
+	margin-top: 10px;
+}
+
+#message{
+	color: red;
 }
